--- a/weekend_01_17Feb2025/portfolio-website/package.json
+++ b/weekend_01_17Feb2025/portfolio-website/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "emailjs": "^4.0.3",
+    "framer-motion": "^10.x",
+    "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "framer-motion": "^10.x",
-    "lucide-react": "^0.263.1"
+    "resend": "^4.1.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.x",
