--- a/weekend_01_17Feb2025/portfolio-website/package.json
+++ b/weekend_01_17Feb2025/portfolio-website/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@google/generative-ai": "^0.24.0",
     "emailjs": "^4.0.3",
     "framer-motion": "^10.x",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "resend": "^4.1.2"
+    "resend": "^4.1.2",
+    "three": "^0.174.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.x",
