--- a/weekend_01_17Feb2025/portfolio-website/package.json
+++ b/weekend_01_17Feb2025/portfolio-website/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^4.4.1",
     "@google/generative-ai": "^0.24.0",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "emailjs": "^4.0.3",
     "framer-motion": "^10.x",
     "lucide-react": "^0.263.1",
